# lambda-shell

./: .gitignore  LambdaShell.cabal  README  lambda-hcar.tex  prelude.lam  stack.yaml
home/: index.html
src/: CPS.hs  Env.hs  Lambda.hs  LambdaCmdLine.hs  LambdaParser.hs  LambdaSearchTree.hs  LambdaShell.hs  Syntax.hs  Version.hs  main.hs
